--- a/packages/tdd/package.json
+++ b/packages/tdd/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"build": "waffle",
 		"pretest": "yarn build",
-		"test": "npx hardhat test"
+		"test": "mocha"
 	},
 	"devDependencies": {
 		"@nomiclabs/hardhat-ethers": "^2.0.2",
@@ -14,6 +14,7 @@
 		"chai": "^4.3.4",
 		"ethereum-waffle": "^3.4.0",
 		"ethers": "^5.4.7",
-		"hardhat": "^2.6.4"
+		"hardhat": "^2.6.4",
+		"mocha": "^9.1.2"
 	}
 }
